scenarios/27-allowed-routes-kinds-same-port/32-backend-b-httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend-b-https-route
  namespace: backend-b
  labels:
    app.kubernetes.io/part-of: demo
spec:
  parentRefs:
    - name: kind-restricted-gateway
      namespace: gateway-system
      sectionName: https
  hostnames:
    - http-b.http.example.test
  rules:
    - backendRefs:
        - name: api
          port: 80
