scenarios/27-allowed-routes-kinds-same-port/36-backend-a-tlsroute.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: backend-a-tls-route
  namespace: backend-a
  labels:
    app.kubernetes.io/part-of: demo
spec:
  parentRefs:
    - name: kind-restricted-gateway
      namespace: gateway-system
      sectionName: tls-passthrough
  hostnames:
    - tls-a.tls.example.test
  rules:
    - backendRefs:
        - name: backend-mtls
          port: 9443
